# texture-vae

./: .flake8  .gitignore  Makefile  README.md  create_venv.sh  index.html  pyproject.toml  setup.py
notebooks/: stich.ipynb  visualize.py.ipynb  visualize_latent.ipynb
notebooks/.ipynb_checkpoints/: stich-checkpoint.ipynb
snapshots/: snapshot_lat32_res128_kl0.7.onnx  texture_vae_lat32_res128_kl5e-4.onnx
texture_vae/: config.yml  minst_vae_conv.py  sample.py  texture_crop.py  texture_dataset.py  texture_vae_conv.py  train.py
texture_vae/cli/: crop_gen.py
texture_vae/models/: minst_vae.py  texture_vae.py
texture_vae/models/tests/: test_texture_vae.py
texture_vae/utils/: export_onnx.py  mmsim.py  quilt.py  texture_dataset.py  utils.py
texture_vae/utils/tests/: test_mmsim.py
wasm/: snapshot_lat64_res128_0.75.onnx  vae.cpp  vae.js  vae.wasm
